1.5.0:
    -Show more information at Chisel&Bits blocks
    -Fixed RF is not displayed
    -Added syncing for RF and EU
    -Beetroots are now shoe their Growth status
    -Fixed Light source only show if it stand on the ground
    -Disabled complete description overwriting, mod names are still shown
    -Pressing CTRL in a inventory shows up all slot numbers

1.4.3:
    -Fixed hardcoded HQM dependency
    -Fixed server crash on startup

1.4.2:
    -Fixed Exception spam if HQM is present

1.4.1:
    -Fixed IC2 integration if tech reborn is present without ic2

1.4.0:
    -Added Chisels&Bits integration
    -Fixed IC2 Block names
    -Added 'Needs Wrench' to IC2 machines
    -Added 'ForgeUnit' integration
    -Rearranged Energy text
    -Added Light level to the tooltip (Needs config special abilities)
    -Double plants are now show the correct name
    -Rewrote the GuiTUMAT and moved the open button to the ESC Menu
    -Fixed some '<ERROR>' messages if a mod does not override vanilla blocks correct
    -Added a minimum forge version


    -API:
        -Added getLength(FontRenderer) to the IComponentRender interface
        -Reformat code
        -Moved Harvestability to it's own class
        -Moved EventsTUMAT to it's own class and used @EventBusSubscriber