@@ -11,3 +11,4 @@
 java_pid8366.hprof
 src/api/
 src/test/
+/run_server/
